--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -159,7 +159,7 @@
               <div class="clearfix">
                 <label for="name">Produto</label>
                  <div class="input">
-                    <span class="add-on"></span><input class="product_select xlarg" name="product" />
+                    <span class="add-on"></span><input class="product_select xlarg" name="product" id="product"/>
                     <span class="help-block"></span>
                  </div>
               </div>                          
