--- a/src/main/webapp/product_admin/edit.html
+++ b/src/main/webapp/product_admin/edit.html
@@ -343,9 +343,9 @@
               <label for="qtd">Quantidade</label>
               <div class="input">
                   <div class='inline-inputs'>
-                    <input class="mini" id="qtd" name="qtd" size="5 " value = "1" type="text"/>
+                    <input class="mini" id="qtd" name="qtd" size="5 " value = "1" type="number"/>
                     Ordem
-                    <input class="mini" id="orderinreport" name="orderinreport" size="5 " value = "1" type="text"/>
+                    <input class="mini" id="orderinreport" name="orderinreport" size="5 " value = "1" type="number"/>
                   </div>
                   <span class="help-block">Quantidade / Ordem nos relatórios</span>
               </div>
