audit - tmplates footer

--- a/src/main/webapp/templates-hidden/user-redesign.html
+++ b/src/main/webapp/templates-hidden/user-redesign.html
@@ -255,9 +255,9 @@
 		</div>
 	</div>
 
-	<footer>
+	<!--footer>
 		<div class="lift:surround?with=footer-redesign;at=footer"></div>
-	</footer>
+	</footer-->
 </div> <!-- /container -->
 </div>
 <div id="customer_search" class="modal hide fade">
