--- a/src/main/webapp/templates-hidden/budget.html
+++ b/src/main/webapp/templates-hidden/budget.html
@@ -199,10 +199,11 @@
           </div>
         </div>
       </div>
-      <footer>
+      <!-- para não ter que dar scroll ao clicar nas abas -->
+      <!--footer>
         <div class="lift:surround?with=footer;at=footer">
         </div>
-      </footer>
+      </footer-->
     </div> <!-- /container -->
     </div>
     <div id="customer_search" class="modal hide fade">
