--- a/src/main/webapp/templates-hidden/user.html
+++ b/src/main/webapp/templates-hidden/user.html
@@ -222,10 +222,10 @@
       </div>
     </div>
   </div>
-  <footer>
+  <!--footer>
     <div class="lift:surround?with=footer;at=footer">
     </div>
-  </footer>
+  </footer-->
 </div> <!-- /container -->
 </div>
 <div id="customer_search" class="modal hide fade">
