--- a/src/main/webapp/templates-hidden/records.html
+++ b/src/main/webapp/templates-hidden/records.html
@@ -142,6 +142,19 @@
       <div>
         <h5>Agenda</h5>
         <ul>
+          <div class="lift:SecuritySnippet.IsNotMedicalSystem">            
+          <li class="lift:SecuritySnippet.hasQuizModule">
+            <a href="/quiz/list" class="_popover_basic" rel="popover" data-content="Alterar, excluir ou buscar um modelo de questionário" data-original-title="Questionários">
+              <img width='32' src="/images/question.png"/>
+            </a>
+          </li>
+          </div>
+          <div class="lift:SecuritySnippet.IsMedicalSystem">            
+          <li class="lift:SecuritySnippet.hasQuizModule">
+            <a href="/quiz/list" class="_popover_basic" rel="popover" data-content="Alterar, excluir ou buscar um modelo prontuário" data-original-title="Prontuários">
+              <img width='32' src="/images/records.png"/>
+            </a>
+          </li>
           <li>       
             <a href="/customer/customer_treatment_report" class="lift:SecuritySnippet.isEdoctusSystem _popover_basic" rel="popover" data-content="Atendimentos de pacientes" data-original-title="Atendimentos">
               <img width='32' src="/images/treatment.png"/>
