fidelity paymenttype - checkout improvements

--- a/src/main/webapp/customer/customer_accountdetail_report.html
+++ b/src/main/webapp/customer/customer_accountdetail_report.html
@@ -123,7 +123,7 @@
           <div class="span8">
             <div class="clearfix">
               <label for="customer">
-                Cliente 
+                <span data-i18n='Cliente'></span> 
                 <img src="/images/search.png" width="24" class="customer_search_button">  
               </label>
               <div class="input">
