--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -108,6 +108,11 @@
                 <img width='32' src="/images/delivery.png"/>
               </a>
           </li>
+          <li>
+              <a href="/customer/customer_fidelity_report" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de saldo de pontos fidelidade" data-original-title="Relatório de saldo de pontos fidelidade">
+                <img width='32' src="/images/diamond-16.png"/>
+              </a>
+          </li> 
           <li class='lift:SecuritySnippet.hasBpmonthlyModule'>
               <a href="/customer/customer_bpmonthly_report" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de Mensalidades" data-original-title="Relatórios de Mensalidades">
                 <img width='32' src="/images/calendar_addon.png"/>
