monthly debtors - inactive - cnab 240

--- a/src/main/webapp/monthly/list_monthly.html
+++ b/src/main/webapp/monthly/list_monthly.html
@@ -14,6 +14,7 @@
 			<form action=''>
 				<input class="local_storage xlarge name_monthly" id="name_monthly" name="name" size="30" type="text" placeholder="Nome"/>
 				<input class="all" id="all" name="all" type="checkbox"/> Mostrar todos?
+				<input class="debtors local_storage" id="debtors" name="debtors" type="checkbox"/> Apenas devedores?
 			    <span class='label-inline'>
 			    	Itens por Página
 			    </span>
