logo in the calendar

--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -28,6 +28,9 @@
 			<div class="clearfix ">
 				<div class="input">
 					<div class="inline-inputs">
+						<span class='calendar-filter hide_mobile'>
+							<span class="lift:CompanySnippet.thumbh"> </span>
+						</span>
 						<span class='calendar-filter lift:SecuritySnippet.hasUnitModule'>
 							<span class='label-calendar'>
 								Unidade : 	
