--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -387,7 +387,7 @@
                         <div class="form-inline">
                             <div class="form-group">
                                 <label for="parent">Superior</label>
-                                <input class="form-control id_customer_search" data-just_user='true' id='parent' name="parent"/> 
+                                <input class="form-control id_customer_search" data-just_user='true' id='parent' name="parent" size="10"/> 
                                 <input class="name_customer_search" style="top: 0" name="parentname" id="parentname"  size="30" placeholder="Nome" data-just_user='true'/>
                             </div>
                         </div>
@@ -398,7 +398,7 @@
                             <div class="form-group">
                                 <label for="parent_percent">Comissão Superior</label>
                                 <div class="input-group">
-                                    <input class="form-control" id="parent_percent" name="parent_percent" size="30"/>
+                                    <input class="form-control" id="parent_percent" name="parent_percent" size="10"/>
                                     <span class="input-group-addon">%</span>
                                 </div>
                                 <span class="hint right">Percentual do valor do serviço/produto de repasse para o Superior</span>
