product/activity audit

--- a/src/main/webapp/activity/edit.html
+++ b/src/main/webapp/activity/edit.html
@@ -362,6 +362,12 @@
                   <span class="help-block">Cor que será mostrada no relatório</span>
                </div>
             </div>
+            <div class="clearfix">
+                <label for="auditstr">Auditoria</label>
+                <div class="input">
+                  <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
+                </div>
+            </div>                     
           </span>
           <span class="span7">
             <div class="clearfix">
