--- a/src/main/webapp/product_admin/edit.html
+++ b/src/main/webapp/product_admin/edit.html
@@ -191,6 +191,12 @@
                   </div>
                 </div>
             </div>                         
+            <div class="clearfix">
+                <label for="auditstr">Auditoria</label>
+                <div class="input">
+                  <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
+                </div>
+            </div>                     
           </span>
           <span class="span7">
             <div class="clearfix">
