report K - cheque info

--- a/src/main/webapp/financial/commission_report.html
+++ b/src/main/webapp/financial/commission_report.html
@@ -66,16 +66,16 @@
     fields[5] = {
       type: "format",
       decode: function(name, row) {
-        return "<a href='/customer/edit?id=" + row[11] + "' target='_customer_maste'>" + name + "</a>";
+        return "<a style='line-height: 105%' href='/customer/edit?id=" + row[11] + "' target='_customer_maste'>" + name + "</a>";
       }
     }
     fields[6] = {
       type: "format",
       decode: function(name, row) {
         if (row[12] != "" && row[12] != "0") {
-          return "<a href='/activity/edit?id=" + row[12] + "' target='_activity_maste'>" + name + "</a>";
+          return "<a style='line-height: 105%' href='/activity/edit?id=" + row[12] + "' target='_activity_maste'>" + name + "</a>";
         } else {
-          return "<a href='/product_admin/edit?id=" + row[13] + "' target='_product_maste'>" + name + "</a>";
+          return "<a style='line-height: 105%' href='/product_admin/edit?id=" + row[13] + "' target='_product_maste'>" + name + "</a>";
         }
       }
     }
