command mobile improvements

--- a/src/main/webapp/activity/edit.html
+++ b/src/main/webapp/activity/edit.html
@@ -85,7 +85,7 @@
               </div>
             </div>
             <div class="clearfix lift:SecuritySnippet.hasFidelityModule">
-              <label for="price" >Pontos Fidelidade</label>
+              <label for="pointsonbuy" >Pontos Fidelidade</label>
               <div class="input">
                 <div class="input-prepend">
                   <span class="add-on"><img src='/images/diamond-16.png'/></span> 
@@ -95,7 +95,7 @@
               </div>
             </div>                
             <div class="clearfix lift:SecuritySnippet.hasFidelityModule">
-              <label for="price" >Preço em Pontos</label>
+              <label for="pointsprice" >Preço em Pontos</label>
               <div class="input">
                 <div class="input-prepend">
                   <span class="add-on"><img src='/images/diamond-16.png'/></span> 
@@ -249,7 +249,7 @@
           </span>
           <span class="span7">
             <div class="clearfix lift:SecuritySnippet.isNotMedicalSystem">
-              <label for="name">Mostra na Comanda?</label>
+              <label for="nashowInCommandme">Mostra na Comanda?</label>
               <div class="input">
                 <div class="input-prepend">
                   <label class="add-on"><input type="checkbox" name="showInCommand"></label>
