--- a/src/main/webapp/command_full/user_command_full.html
+++ b/src/main/webapp/command_full/user_command_full.html
@@ -1,4 +1,4 @@
-<div id="main" class="lift:surround?with=calendar;at=content">
+<div id="main" class="lift:surround?with=command;at=content">
   <script type="text/javascript" src="/js/reports.js"></script>
   <script type="text/javascript" src='/js/default/animal.js'>
   </script>
@@ -61,7 +61,7 @@
                     <input id="send" value="Buscar" class="btn success" type="button">
                   </div>
                   <div class="input">
-                    <input id="forget" value="Esquecer" class="btn danger" type="button" title="Clique aqui para limpar suas informações e sua senha">
+                    <input id="forget" value="Esquecer" class="btn danger hide_mobile" type="button" title="Clique aqui para limpar suas informações e sua senha">
                   </div>
                 </div>
               </div>
@@ -166,7 +166,7 @@
                   <div class="input">
                     <div class="inline-inputs">
                         <div style="float:left; padding-right:10px" class="input-prepend">
-                          <span class="add-on"><img width="16" src="/images/cut.png"></span> 
+                          <span class="add-on hide_mobile"><img width="16" src="/images/cut.png"></span> 
                           <select name="activity" id='activity'></select>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                   <div class="input">
                     <div class="inline-inputs">
                       <div style="float:left; padding-right:10px" class="input-prepend">
-                        <span class="add-on"><img width="16" src="/images/agreement.png"></span> 
+                        <span class="add-on hide_mobile"><img width="16" src="/images/agreement.png"></span> 
                         <select class= 'xlarge' id='offsale'  name="offsale"></select>
                       </div>
                     </div>
@@ -204,7 +204,7 @@
                   <div class="input">
                     <div class="inline-inputs">
                       <div style="float:left; padding-right:10px" class="input-prepend">
-                            <span class="add-on"></span> 
+                            <span class="add-on  hide_mobile"></span> 
                             <input class="xlarge process_product_field" name="product" id='product'/>
                       </div>                                                    
                     </div>
@@ -215,9 +215,9 @@
                   <div class="input">
                     <div class="inline-inputs">
                       <div style="float:left; padding-right:10px" class="input-prepend">
-                        <span class="add-on"><img width="16" src="/images/categorie.png"></span> 
+                        <span class="add-on hide_mobile"><img width="16" src="/images/categorie.png"></span> 
                         <input type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_search">
-                         <span class="help-block">Quantidade atual do produto em estoque</span>
+                         <span class="hide_mobile help-block">Quantidade atual do produto em estoque</span>
                       </div>
                     </div>
                   </div>
@@ -242,11 +242,11 @@
                     <div class="input">
                       <div class="inline-inputs">
                           <div style="float:left; padding-right:10px" class="input-prepend">
-                            <span class="add-on"><img width="16" src="/images/clock.png"></span>
+                            <span class="add-on  hide_mobile"><img width="16" src="/images/clock.png"></span>
                             <input type="text" size="19" name="hour_start" id="hour_start" class="mini time"/>
                           </div>
                           <div style="float:left; padding-right:10px" class="input-prepend">
-                            <span class="add-on"><img width="16" src="/images/clock.png"></span>
+                            <span class="add-on  hide_mobile"><img width="16" src="/images/clock.png"></span>
                             <input type="text" size="19" name="hour_end" id="hour_end" class="mini time"/>
                           </div>
                       </div>
@@ -257,11 +257,11 @@
                     <div class="input">
                       <div class="inline-inputs">
                           <div style="float:left; padding-right:10px" class="input-prepend">
-                            <span class="add-on"><img width="16" src="/images/money.png"></span>
+                            <span class="add-on  hide_mobile"><img width="16" src="/images/money.png"></span>
                             <input type="text" size="19" name="price" id="price" class="mini currency"/>
                           </div>
                           <div style="float:left; padding-right:10px" class="input-prepend">
-                            <span class="add-on"><img width="16" src="/images/add.png"></span>
+                            <span class="add-on  hide_mobile"><img width="16" src="/images/add.png"></span>
                             <input type="number" step='1' min='0' size="19" name="amount" id="amount" class="mini" value="1"/>
                           </div>
                       </div>
