--- a/src/main/webapp/templates-hidden/toolbar.html
+++ b/src/main/webapp/templates-hidden/toolbar.html
@@ -278,7 +278,7 @@
     </div><!-- /topbar -->
     <span class='topbar_fallback'>
         <a href="#">
-            <img src="/images/icon.png" alt="">
+            <img src="/images/menublack.png" alt="">
         </a>
     </span>
 </div><!-- /topbar-wrapper -->
